@@ -39,11 +39,11 @@ symboltables {
 
      "clefs" = table {
 	     "violin"	"\violinclef"	 	0pt	12.8pt	-10pt	18pt
-	     "bass"	"\bassclef" 		0pt	11.2pt	0pt	16pt
+	     "bass"	"\bassclef" 		0pt	12.8pt	0pt	16pt
 	     "alto"	"\altoclef"	 	0pt	12.8pt	0pt	16pt
 	     "tenor"	"\altoclef"	 	0pt	12.8pt	0pt	16pt
 	     "violin_change"	"\cviolinclef" 	0pt	11.2pt	-12pt	12pt
-	     "bass_change"	"\cbassclef"	0pt	12.8pt	0pt	16pt
+	     "bass_change"	"\cbassclef"	0pt	11.2pt	0pt	16pt
 	     "alto_change"	"\caltoclef" 	0pt	11.2pt	0pt	16pt
 	     "tenor_change"	"\caltoclef" 	0pt	11.2pt	0pt	16pt
      }
